## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

INCLUDES =\
	 -g

LIBS = -L/usr/lib -Wl,-rpath,/usr/lib -lSDL -lSDL_image -lpthread -lSDL_mixer

bin_PROGRAMS = deadlycobra

deadlycobra_SOURCES = \
	music\
	pixmaps\
	snaps\
	bitmap.cc\
	bitmap.h\
	data\
	data1\
	data2\
	define.h\
	draw.h\
	enemy.cc\
	enemy.h\
	game.cc\
	game.h\
	main.cc\
	man.cc\
	man.h\
	map.cc\
	map.h\
	obstacles.cc\
	obstacles.h\
	snake.cc\
	snake.h

deadlycobra_LDADD =
